<resources>
    <string name="app_name">Digital Classroom</string>
    <string name="sign_in">Sign in with Email Address</string>
    <string name="email">Email</string>
    <string name="sign">Sign in</string>
    <string name="pass">Password</string>
    <string name="sign_in_to_continue">Sign in to Continue</string>
    <string name="sign_up_here">Sign Up</string>
    <string name="forgot_pass">Forgot Password?</string>
    <string name="no_acc">Dont have an account? </string>
    <string name="sign_up">Sign up here</string>
    <string name="user_name">Username</string>
    <string name="sign_up_to_continue">Sign Up to Continue</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="logo_text">logo</string>
    <string name="alrdy_regd">Already registered?</string>
    <string name="sign_in_now">Sign in now</string>
    <string name="john_doe">John Doe</string>
    <string name="reset_pass">Reset Password</string>
    <string name="digital_classroom">Digital Classroom</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>