<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/primary_color"
    android:fontFamily="@font/inprimis"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:fontFamily="@font/inprimis"
        android:layout_marginTop="24dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="110dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:src="@drawable/logo"
            android:contentDescription="@string/logo_text" />

        <TextView
            android:id="@+id/signUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/inprimis"
            android:text="@string/sign_up_to_continue"
            android:gravity="center"
            android:textColor="@color/default_blue"
            android:textSize="25sp"
            android:textStyle="bold" />

        <EditText
        android:id="@+id/email"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:autofillHints="@string/email"
        android:fontFamily="@font/inprimis"
        android:drawableStart="@drawable/ic_email_gray_24dp"
        android:drawablePadding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/stroked_borders"
        android:hint="@string/email"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="5dp"
        android:paddingBottom="10dp"
        android:layout_marginTop="25dp"
         />

    <EditText
        android:id="@+id/username"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:autofillHints="@string/user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/stroked_borders"
        android:drawableStart="@drawable/ic_person_gray_24dp"
        android:drawablePadding="16dp"
        android:hint="@string/user_name"
        android:textSize="16sp"
        android:fontFamily="@font/inprimis"
        android:inputType="text"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:layout_marginTop="20dp"
        android:paddingEnd="5dp"
        android:paddingBottom="10dp"/>

    <EditText

        android:textColorHint="@color/black"
        android:id="@+id/password"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/stroked_borders"
        android:drawableStart="@drawable/ic_lock_gray_24dp"
        android:drawablePadding="16dp"
        android:hint="@string/pass"
        android:fontFamily="@font/inprimis"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="5dp"
        android:paddingBottom="10dp"
        android:layout_marginTop="20dp"

         />

    <EditText

        android:id="@+id/confirm_pass"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:autofillHints="@string/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inprimis"
        android:background="@drawable/stroked_borders"
        android:drawableStart="@drawable/ic_lock_gray_24dp"
        android:drawablePadding="16dp"
        android:hint="@string/confirm_password"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="5dp"
        android:paddingBottom="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
         />

        <Button
            android:id="@+id/signUpBtn"
            android:layout_width="fill_parent"
            android:layout_height="53dp"
            android:background="@drawable/rounded_borders"
            android:text="@string/sign_up_here"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            app:backgroundTint="@color/default_blue"
            android:fontFamily="@font/inprimis"

             />
       <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:orientation="vertical">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#80D1D1D1" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginBottom="20dp"
                    android:orientation="horizontal"
                    android:weightSum="100">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="50"
                        android:fontFamily="@font/inprimis"
                        android:paddingTop="16dp"
                        android:paddingBottom="16dp"
                        android:text="@string/alrdy_regd"
                        android:gravity="center"
                        android:textColor="#000000"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/signIn"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="50"
                        android:fontFamily="@font/inprimis"
                        android:paddingTop="16dp"
                        android:paddingBottom="16dp"
                        android:text="@string/sign_in_now"
                        android:gravity="end"
                        android:layout_marginEnd="16dp"
                        android:textColor="@color/default_blue"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                </LinearLayout>
       </LinearLayout>
    </LinearLayout>
    </ScrollView>

</RelativeLayout>